implementada inyección de dependencias con guice. testCucumber.feature aún falla